--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "module": "./dist/index.mjs",
   "browser": "dist/index.umd.js",
   "unpkg": "dist/index.umd.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/utils.d.ts",
   "sideEffects": false,
   "repository": "git://github.com/typeofweb/utils",
   "bugs": {
@@ -39,6 +39,7 @@
     "utilities"
   ],
   "devDependencies": {
+    "@microsoft/api-extractor": "7.16.1",
     "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-typescript": "8.2.1",
@@ -70,7 +71,9 @@
     "jest": "NODE_OPTIONS=--experimental-vm-modules jest",
     "test": "NODE_OPTIONS=--experimental-vm-modules yarn jest --detectOpenHandles --forceExit --passWithNoTests --coverage",
     "test:dev": "NODE_OPTIONS=--experimental-vm-modules yarn jest --watch",
-    "build": "rimraf dist && rollup --config",
+    "build": "yarn rollup:build && yarn api-extractor:build",
+    "rollup:build": "rimraf dist && rollup --config",
+    "api-extractor:build": "api-extractor run --verbose",
     "build:watch": "rollup --config --watch",
     "prepublishOnly": "yarn build",
     "prepare": "husky install"
